Fix compatibility with OSPREY v0.9.1+ refactored API
- Update get_model_config() calls to use new single-argument API
- Flatten nested pv_finder model configuration in config.yml
- Update pyproject.toml to require osprey-framework>=0.9.1
- Clean up whitespace in registry.py

The OSPREY refactoring changed get_model_config() from accepting
3 arguments (app, service, model) to 1-2 arguments (model_name, config_path).
All model configurations are now defined in a flat structure at the top level.

--- a/config.yml
+++ b/config.yml
@@ -84,20 +84,19 @@ models:
     model_id: google/gemini-flash
     max_tokens: 4096
 
-  # Nested ALS Assistant models
-  pv_finder:
-    keyword:
-      provider: cborg
-      model_id: google/gemini-flash
-      max_tokens: 4096
-    query_splitter:
-      provider: cborg
-      model_id: google/gemini-flash
-      max_tokens: 4096
-    pv_query:
-      provider: cborg
-      model_id: google/gemini-flash
-      max_tokens: 4096
+  # PV Finder models (flattened for v0.9.1+ compatibility)
+  pv_finder_keyword:
+    provider: cborg
+    model_id: google/gemini-flash
+    max_tokens: 4096
+  pv_finder_query_splitter:
+    provider: cborg
+    model_id: google/gemini-flash
+    max_tokens: 4096
+  pv_finder_pv_query:
+    provider: cborg
+    model_id: google/gemini-flash
+    max_tokens: 4096
 
 # ============================================================
 # SERVICE CONFIGURATION
